# git-dump

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake.yml
libgit2-cpp/: CMakeLists.txt
libgit2-cpp/include/libgit2-cpp/: Commit.h  Error.h  Helpers.h  Repository.h
libgit2-cpp/src/: Commit.cpp  Error.cpp  Repository.cpp
